--- a/edm/src/index.html
+++ b/edm/src/index.html
@@ -18,6 +18,14 @@
   <link href="assets/adminAssets/css/colors.min.css" rel="stylesheet" type="text/css">
   <!-- /global stylesheets -->
 
+  <!-- Added by Pallavi -->
+  <link href="assets/css/global.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <!-- Added by Pallavi -->
+
   <!-- Core JS files -->
   <script src="assets/adminAssets/js/main/jquery.min.js"></script>
   <script src="assets/adminAssets/js/main/bootstrap.bundle.min.js"></script>
