--- a/edm/src/index.html
+++ b/edm/src/index.html
@@ -1,64 +1,13 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Edm</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Global stylesheets -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-  <link href="assets/adminAssets/css/icons/icomoon/styles.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/adminAssets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/adminAssets/css/bootstrap_limitless.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/adminAssets/css/layout.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/adminAssetsts/css/components.min.css" rel="stylesheet" type="text/css">
-  <link href="assets/adminAssets/css/colors.min.css" rel="stylesheet" type="text/css">
-  <!-- /global stylesheets -->
-
-  <!-- Added by Pallavi -->
-  <link href="assets/css/global.css" rel="stylesheet" type="text/css">
-  <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <!-- Added by Pallavi -->
-
-  <!-- Core JS files -->
-  <script src="assets/adminAssets/js/main/jquery.min.js"></script>
-  <script src="assets/adminAssets/js/main/bootstrap.bundle.min.js"></script>
-  <script src="assets/adminAssets/js/plugins/loaders/blockui.min.js"></script>
-  <script src="assets/adminAssets/js/plugins/ui/ripple.min.js"></script>
-  <!-- /core JS files -->
-
-  <!-- Theme JS files -->
-  <script src="assets/adminAssets/js/plugins/visualization/d3/d3.min.js"></script>
-  <script src="assets/adminAssets/js/plugins/visualization/d3/d3_tooltip.js"></script>
-  <script src="assets/adminAssets/js/plugins/forms/styling/switchery.min.js"></script>
-  <script src="assets/adminAssets/js/plugins/forms/selects/bootstrap_multiselect.js"></script>
-  <script src="assets/adminAssets/js/plugins/ui/moment/moment.min.js"></script>
-  <script src="assets/adminAssets/js/plugins/pickers/daterangepicker.js"></script>
-
-  <script src="assets/adminAssets/assets/js/app.js"></script>
-  <script src="assets/adminAssets/js/demo_pages/dashboard.js"></script>
-
-  <script>
-    function WhichSide(){
-      if(window.location.pathname == '/admin'){
-        $("body").addClass("admin_side");
-      }else {
-        $("body").addClass("user_side");
-      }
-    }
-  </script>
-
 </head>
-
-<body onload="WhichSide()">
+<body>
   <app-root></app-root>
 </body>
-
 </html>
